--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config webpack/webpack.config.js --mode=development",
+    "dev": "webpack-dev-server --config webpack/webpack.config.js --mode=development",
     "build": "webpack --mode production"
   },
   "author": "",
@@ -22,6 +22,7 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1"
   }
 }
